Another attempt to fix windows file URI issues from afar, if lucky all tests should now pass, unless something else has failed.
git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/trunk@1362940 13f79535-47bb-0310-9956-ffa450edef68