@@ -267,14 +267,26 @@ class DefaultPolicyParser implements PolicyParser {
             .build();
     }
     
-    URI getURI(String uri) throws MalformedURLException, URISyntaxException{
+    URI getURI(String uriString) throws MalformedURLException, URISyntaxException{
         // We do this to support windows, this is to ensure that drive letter
         // capitalisation is correct and illegal strings are escaped correctly.
-        // It give the native parser a chance to correctly parse and format
-        // platform specific information.
-        String url = new URL(uri).toString();
-        if (url == null || url.equals("")) return new URI(UriString.escapeIllegalCharacters(uri));
-        return new URI(UriString.escapeIllegalCharacters(url));
+        String result = UriString.parse(uriString);
+        boolean isFile = result.startsWith("file:") || result.startsWith("FILE:");
+        URI uri = new URI(result);
+        if (isFile){
+            if ( result.endsWith("*") || result.endsWith("-")){
+                // We did our best to create a compatible URI,
+                // upper and lower case may cause issues on windows, if the
+                // CodeSource url differs.
+                return uri; 
+            } else {
+                // Since file is system dependant, it will guarantee that
+                // the path is compatible and exists.
+                File file = new File(uri);
+                return file.toURI().normalize();
+            }
+        }
+        return uri;
     }
     
     Segment segment(String s, Properties p) throws ExpansionFailedException{
